# http-encoding-headers

./: Cargo.toml  LICENSE  README.md
examples/: accept_encoding_preferred.rs  basic_usage.rs  encode_decode.rs
examples/axum_integration/: Cargo.toml
examples/axum_integration/src/: main.rs
src/: accept_encoding.rs  content_encoding.rs  encoding.rs  lib.rs
