[package]
name = "http_encoding_headers"
description = "A  library for handling HTTP Accept-Encoding and Content-Encoding headers with support for common compression algorithms and custom encodings."
version = "0.1.0"
authors = ["Nick Ufer <nick@ufer.dev>"]
homepage = "https://github.com/NickUfer/http-encoding-headers"
repository = "https://github.com/NickUfer/http-encoding-headers"
license = "MIT"
keywords = ["http", "headers", "accept-encoding", "content-encoding"]
readme = "README.md"
edition = "2024"

[dependencies]
thiserror = "2"
http = { version = "1", optional = true }
headers = { version = "0.4", optional = true }

[features]
default = ["http_crates"]
http_crates = ["http", "headers"]