[package]
name = "http_encoding_headers_axum_integration_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
axum-extra = { version = "0.10",  features = ["typed-header"] }
tokio = { version = "1.0",  features = ["full"] }
serde = { version = "1.0",  features = ["derive"] }
serde_json = { version = "1.0" }
http_encoding_headers = { path = "../.." }
